--- a/newapp4TWIN3-init-main/views/chat.twig
+++ b/newapp4TWIN3-init-main/views/chat.twig
@@ -7,9 +7,13 @@
 <body>
 
     <h1>Bonjour</h1>
-
+   Message:<input type="text" id="chat">
+    <button onClick="sendMsg()">Send</button>
+    <button onClick="displayMsg()">display Msg</button>
+   
    
     <script>
+    var name =prompt ('type your name')
        var socket=io();
        socket.on('msg',(data)=>{
         console.log(data)
@@ -17,6 +21,29 @@
         p.innerText= data
         document.body.append(p)
        })
+       socket.on('msgList',(data)=>{
+        console.log(data)
+        for(i=0;i<data.length;i++){
+            var p= document.createElement('p')
+            p.innerText=data[i].msg
+            document.body.append(p)
+        }
+       }
+       )
+
+       function sendMsg(){
+        var msg =document.getElementById('chat').value
+        console.log(msg)
+        var data ={name,msg}
+        console.log(data)
+        socket.emit('send-msg',data)
+        
+       }
+       function displayMsg(){
+                socket.emit('displaymsg','Afficher les msgs')
+
+
+       }
     </script>
 
 </body>
